--- a/app/src/main/res/layout/activity_wx_entry.xml
+++ b/app/src/main/res/layout/activity_wx_entry.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg">
+    android:background="@drawable/login_bg"
+    android:fitsSystemWindows="true">
 
     <ImageView
         android:id="@+id/imageView"
@@ -15,7 +17,7 @@
         android:src="@drawable/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
         android:id="@+id/tel"
@@ -31,7 +33,7 @@
         android:inputType="phone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <EditText
         android:id="@+id/password"
@@ -46,7 +48,7 @@
         android:inputType="textPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tel" />
+        app:layout_constraintTop_toBottomOf="@+id/tel"/>
 
     <TextView
         android:id="@+id/forgot_password"
@@ -55,7 +57,7 @@
         android:layout_marginTop="10dp"
         android:text="忘记密码?"
         app:layout_constraintRight_toRightOf="@+id/password"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password"/>
 
     <LinearLayout
         android:id="@+id/button_area"
@@ -76,7 +78,7 @@
             android:layout_marginRight="22dp"
             android:layout_marginStart="22dp"
             android:layout_weight="1"
-            android:text="注册" />
+            android:text="注册"/>
 
         <Button
             android:id="@+id/login_btn"
@@ -85,7 +87,7 @@
             android:layout_marginEnd="22dp"
             android:layout_marginRight="22dp"
             android:layout_weight="1"
-            android:text="登录" />
+            android:text="登录"/>
     </LinearLayout>
 
     <ImageView
@@ -101,7 +103,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageView
         android:id="@+id/login_qq"
@@ -115,7 +117,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/login_weixin"
         app:layout_constraintLeft_toRightOf="@+id/login_weixin"
         app:layout_constraintRight_toLeftOf="@+id/login_weibo"
-        app:layout_constraintTop_toTopOf="@+id/login_weixin" />
+        app:layout_constraintTop_toTopOf="@+id/login_weixin"/>
 
     <ImageView
         android:id="@+id/login_weibo"
@@ -129,7 +131,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/login_weixin"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/thirdLoginLable"
@@ -144,6 +146,6 @@
         android:textColor="#777777"
         app:layout_constraintBottom_toTopOf="@+id/login_qq"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
