--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +16,7 @@
             android:id="@+id/fragment_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -24,7 +26,7 @@
             android:paddingTop="5dip"
             app:tabIndicatorColor="@android:color/transparent"
             app:tabSelectedTextColor="#979797"
-            app:tabTextColor="#FFFFFF" />
+            app:tabTextColor="#FFFFFF"/>
 
     </LinearLayout>
 
@@ -43,7 +45,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
             android:contentDescription="@null"
-            android:src="@drawable/gift_close_btn" />
+            android:src="@drawable/gift_close_btn"/>
 
     </RelativeLayout>
 
