--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8E9E8"
+    android:fitsSystemWindows="true"
     tools:context="com.runnerfun.ShareActivity">
 
     <RelativeLayout
