--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_user_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,81 +13,85 @@
     tools:context="com.runnerfun.UserInfoActivity">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="个人资料"
         android:layout_centerHorizontal="true"
-        android:id="@+id/title"
+        android:text="个人资料"
         android:textSize="22dp"
         />
 
     <TextView
+        android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/skip"
-        android:text="跳过"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
+        android:text="跳过"
         />
 
     <RadioGroup
+        android:id="@+id/sex"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:id="@+id/sex"
         android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
         >
+
         <RadioButton
+            android:id="@+id/male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="male"
 
-            android:id="@+id/male"
             android:layout_marginRight="30dp"
             android:checked="true"
+            android:text="male"
             />
+
         <RadioButton
+            android:id="@+id/female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="female"
-            android:id="@+id/female"
             />
     </RadioGroup>
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="身高"
         android:id="@+id/height"
-        android:inputType="number"
-        android:layout_marginTop="35dp"
-        android:layout_below="@+id/sex"
-        android:layout_alignLeft="@+id/sex"
-        android:layout_alignStart="@+id/sex" />
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/height"
+        android:layout_alignLeft="@+id/sex"
+        android:layout_alignStart="@+id/sex"
+        android:layout_below="@+id/sex"
+        android:layout_marginTop="35dp"
+        android:hint="身高"
+        android:inputType="number"/>
+
+    <EditText
+        android:id="@+id/age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignLeft="@id/sex"
         android:layout_alignRight="@id/sex"
-        android:id="@+id/age"
+        android:layout_below="@id/height"
         android:layout_marginTop="35dp"
         android:hint="年龄"
         android:inputType="number"
         />
 
     <Button
+        android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/age"
-        android:text="下一步"
-        android:id="@+id/next"
         android:layout_alignLeft="@id/sex"
         android:layout_alignRight="@id/sex"
+        android:layout_below="@id/age"
         android:layout_marginTop="35dp"
+        android:text="下一步"
         />
 
 
