--- a/app/src/main/res/layout/activity_wx_pay_result.xml
+++ b/app/src/main/res/layout/activity_wx_pay_result.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -12,6 +14,6 @@
         android:gravity="center"
         android:text="返回结果"
         android:textColor="#ff000000"
-        android:textSize="20dp" />
+        android:textSize="20dp"/>
 
 </LinearLayout>
