--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="#EDEDED"
+        android:background="#FFF"
         android:clipChildren="false"
         android:gravity="center_horizontal"
         android:orientation="vertical">
