--- a/app/src/main/res/layout/activity_share_elem.xml
+++ b/app/src/main/res/layout/activity_share_elem.xml
@@ -106,6 +106,50 @@
             android:scaleType="centerInside"/>
 
         <LinearLayout
+            android:id="@+id/content_ver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/path"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/speed_ver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:text="4/h"
+                android:textColor="#fff"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:id="@+id/hour_ver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:text="4/h"
+                android:textColor="#fff"
+                android:textSize="25sp"/>
+
+            <TextView
+                android:id="@+id/distance_ver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:text="4/h"
+                android:textColor="#fff"
+                android:textSize="25sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/content_hon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/location"
