--- a/app/src/main/res/layout/layout_run_record_item.xml
+++ b/app/src/main/res/layout/layout_run_record_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="0"
         android:textColor="#000"
-        android:textSize="22sp" />
+        android:textSize="32sp"/>
 
     <TextView
         android:id="@+id/attr_name"
@@ -20,6 +21,6 @@
         android:layout_marginTop="4dp"
         android:text="总里程"
         android:textColor="#000"
-        android:textSize="16sp" />
+        android:textSize="14sp"/>
 
 </LinearLayout>
