--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -115,6 +115,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:id="@+id/start_panel"
                 android:layout_height="0dp"
                 android:layout_weight="7">
 
@@ -126,7 +127,33 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="20dp"
                     android:layout_marginTop="16dp"
-                    android:src="@drawable/btn_go"/>
+                    android:src="@drawable/btn_go" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/stop_panel"
+                android:layout_weight="7"
+                android:visibility="gone"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/resume"
+                    android:layout_weight="1"
+                    android:id="@+id/resume_btn"
+                    android:layout_gravity="center_vertical"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/stop"
+                    android:id="@+id/stop_btn"
+                    android:layout_gravity="center_vertical"
+                    />
             </LinearLayout>
 
         </LinearLayout>
