--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -43,7 +43,7 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="验证码"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:paddingLeft="10dp"
         android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.25"
@@ -61,6 +61,7 @@
         android:layout_alignStart="@+id/tel"
         android:ems="10"
         android:hint="密码"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -100,6 +101,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:hint="确认新密码"
+        android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:paddingStart="10dp"
         app:layout_constraintHorizontal_bias="0.57"
