--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v4.view.ViewPager
+        <com.runnerfun.widget.NoScrollViewPager
             android:id="@+id/fragment_content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
