--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -73,6 +73,10 @@
         android:id="@+id/send_code"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
         android:background="@drawable/register_btn_bg"
         android:gravity="center"
         android:text="获取验证码"
