--- a/app/src/main/res/layout/fragment_total_record.xml
+++ b/app/src/main/res/layout/fragment_total_record.xml
@@ -95,6 +95,42 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginStart="24dp"
                 android:gravity="center_vertical"
+                android:text="总有效距离: 公里"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/valid_distance"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="20dp"
+                android:ellipsize="end"
+                android:gravity="end"
+                android:maxLines="1"
+                android:text="300"
+                android:textColor="#E60012"
+                android:textSize="32sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:background="#FFFFFF"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginStart="24dp"
+                android:gravity="center_vertical"
                 android:text="总消耗: 千卡"
                 android:textColor="#333333"
                 android:textSize="14sp" />
@@ -173,42 +209,6 @@
 
             <TextView
                 android:id="@+id/average_sec_speed"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="20dp"
-                android:ellipsize="end"
-                android:gravity="end"
-                android:maxLines="1"
-                android:text="300"
-                android:textColor="#E60012"
-                android:textSize="32sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:background="#FFFFFF"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="15dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginStart="24dp"
-                android:gravity="center_vertical"
-                android:text="最高时速: 公里/小时"
-                android:textColor="#333333"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/max_speed"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="20dp"
